plugins {
	id 'fabric-loom' version '1.17.12'
	id 'maven-publish'
    id "me.modmuss50.mod-publish-plugin" version "2.0.1"
}

loom {
	accessWidenerPath = file("src/main/resources/firorize.accesswidener")
}

version = project.mod_version
group = project.maven_group

base {
    archivesName = project.archives_base_name
}

repositories {
	maven {
		name 'Terraformers'
		url 'https://maven.terraformersmc.com/releases/'
	}
	maven {
		url = "https://jitpack.io"
	}
	maven {
		name = "modrinth"
		url = "https://api.modrinth.com/maven"

		content {
			includeGroup "maven.modrinth"
		}
	}
	maven {
		name = 'Nucleoid'
		url = 'https://maven.nucleoid.xyz/'
	}
}

dependencies {
	minecraft "com.mojang:minecraft:${project.minecraft_version}"
	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"

	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_api_version}"

	modImplementation("com.terraformersmc:modmenu:${project.modmenu_version}")

	include(implementation(annotationProcessor("io.github.llamalad7:mixinextras-fabric:0.4.1")))

	include(implementation('org.apache.commons:commons-collections4:4.5.0-M2'))

	modImplementation(include("eu.pb4:placeholder-api:${project.text_placeholder_api_version}"))
}

tasks.register("generateChangelog") {
    description = "Builds the changelog from the -Pchangelog input ('|'-separated bullet points)."
    doLast {
        // ---- Release type is derived from the version being published, not from any tag. ----
        def version = project.mod_version
        def releaseType = project.default_release_type
        def curseReleaseType = project.default_release_type
        def stabilitySuffix = ""
        if (version.contains("-alpha")) {
            releaseType = "alpha"
            curseReleaseType = "alpha"
            stabilitySuffix = " (Alpha)"
        } else if (version.contains("-beta")) {
            releaseType = "beta"
            curseReleaseType = "beta"
            stabilitySuffix = " (Beta)"
        } else if (version.contains("-pre")) {
            releaseType = "pre"
            curseReleaseType = "beta"
            stabilitySuffix = " (Pre-Release)"
        } else if (version.contains("-rc")) {
            releaseType = "rc"
            curseReleaseType = "beta"
            stabilitySuffix = " (Release Candidate)"
        } else if (!version.contains("-")) {
            releaseType = "stable"
        }
        println "Version: $version"
        println "Release type: $releaseType"

        // ---- Build the changelog from the -Pchangelog text: '|' separates bullet points. ----
        // Passed on the command line as -Pchangelog="First item|Second item|Third item".
        def changes = new StringBuilder()
        def changelogInput = project.findProperty("changelog")
        if (changelogInput) {
            changelogInput.toString().split(/\|/).collect { it.trim() }.findAll { it }.each { line ->
                def entry = "- ${line}".toString()
                println "Adding changelog line: $entry"
                changes << (changes.length() == 0 ? entry : "\n${entry}")
            }
        }

        def releaseChangelog = changes.toString()
        if (releaseChangelog.isEmpty()) {
            releaseChangelog = "No Changelog Available"
            println "No changelog provided. Pass -Pchangelog=\"item one|item two\" to populate it."
        }
        // Expose results to other tasks (e.g. publishMods) via project extra properties.
        project.ext.releaseChangelog = releaseChangelog
        project.ext.releaseType = releaseType
        project.ext.curseReleaseType = curseReleaseType
        project.ext.stabilitySuffix = stabilitySuffix

        println "Changelog:"
        println releaseChangelog
    }
}

// The publish tasks consume the changelog produced by generateChangelog, so they must run after it.
tasks.matching {
    it.name in ["publishMods", "publishModrinth", "publishCurseforge", "publishGithub"]
}.configureEach {
    dependsOn("generateChangelog")
}

publishMods {
    file = remapJar.archiveFile
    modLoaders.add("fabric")

    // game_versions is a comma-separated list (e.g. "1.21, 1.21.1"); split it so each Minecraft
    // version is advertised as its own entry on Modrinth/CurseForge rather than one combined string.
    def gameVersionList = project.game_versions.split(",").collect { it.trim() }.findAll { it }

    // Run with -PdryRunPublish (or -PdryRunPublish=true) to write the would-be upload payloads to
    // build/mod-publish-plugin/ instead of actually publishing to Modrinth/CurseForge/GitHub.
    dryRun = providers.gradleProperty("dryRunPublish").map { it.isEmpty() || Boolean.parseBoolean(it) }.orElse(false)

    // Resolved lazily at execution time, once generateChangelog has populated project.ext.releaseChangelog.
    changelog = providers.provider {
        project.findProperty("releaseChangelog") ?: "No Changelog Available"
    }
    // Capture the plugin's release-type constants now so they resolve inside the lazy provider.
    def stableType = STABLE
    def betaType = BETA
    def alphaType = ALPHA
    type = providers.provider {
        switch (project.findProperty("releaseType")) {
            case "alpha": return alphaType
            case "beta":
            case "pre":
            case "rc": return betaType
            default: return stableType
        }
    }

    modrinth {
        accessToken = providers.environmentVariable("MODRINTH_TOKEN")
        projectId = project.modrinth_id
        minecraftVersions.addAll(gameVersionList)

        requires(project.required_dependencies)
        optional(project.optional_dependencies)
    }
    github {
        accessToken = providers.environmentVariable("GITHUB_TOKEN")
        repository = "RuffleSteels/Firorize"
        commitish = "master"
    }
    curseforge {
        accessToken = providers.environmentVariable("CURSEFORGE_TOKEN")
        projectId = project.curseforge_id
        minecraftVersions.addAll(gameVersionList)
        client = true
        server = false

        requires(project.required_dependencies)
        optional(project.optional_dependencies)
    }
}

processResources {
	inputs.property "version", project.version

	filesMatching("fabric.mod.json") {
		expand "version": project.version
	}
}

tasks.withType(JavaCompile).configureEach {
	it.options.release = 21
    it.options.compilerArgs += ['-Xlint:all', '-Xlint:-classfile', '-Xlint:-processing']
}

java {
	withSourcesJar()

	sourceCompatibility = JavaVersion.VERSION_21
	targetCompatibility = JavaVersion.VERSION_21
}

jar {
	from("LICENSE") {
		rename { "${it}_${base.archivesName.get()}"}
	}
}

publishing {
	publications {
		mavenJava(MavenPublication) {
			from components.java
		}
	}

	repositories {

	}
}
